@@ -1,6 +1,8 @@
 require 'test_helper'
 
 class MonerisTest < Test::Unit::TestCase
+  include CommStub
+
   def setup
     Base.mode = :test
 
@@ -165,8 +167,52 @@ class MonerisTest < Test::Unit::TestCase
     assert_failure response
   end
 
-  private
+  def test_gets_sent_when_its_enabled
+    gateway = MonerisGateway.new(login: 'store1', password: 'yesguy', cvv_enabled: true)
 
+    @credit_card.verification_value = "452"
+    stub_comms do
+      gateway.purchase(@amount, @credit_card, @options)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{cvd_indicator>1<}, data)
+      assert_match(%r{cvd_value>452<}, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_no_cvv_specified_when_its_enabled
+    gateway = MonerisGateway.new(login: 'store1', password: 'yesguy', cvv_enabled: true)
+
+    @credit_card.verification_value = ""
+    stub_comms do
+      gateway.purchase(@amount, @credit_card, @options)
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{cvd_indicator>0<}, data)
+      assert_no_match(%r{cvd_value>}, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_passing_cvv_when_not_enabled
+    @credit_card.verification_value = "452"
+    stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options)
+    end.check_request do |endpoint, data, headers|
+      assert_no_match(%r{cvd_value>}, data)
+      assert_no_match(%r{cvd_indicator>}, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_no_cvv_specified_when_not_enabled
+    @credit_card.verification_value = ""
+    stub_comms do
+      @gateway.purchase(@amount, @credit_card, @options)
+    end.check_request do |endpoint, data, headers|
+      assert_no_match(%r{cvd_value>}, data)
+      assert_no_match(%r{cvd_indicator>}, data)
+    end.respond_with(successful_purchase_response)
+  end
+
+
+  private
   def successful_purchase_response
     <<-RESPONSE
 <?xml version="1.0"?>
